# fp-systems-lab

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  QUICKREF.md  README.md
haskell/: fp-haskell-lab.cabal  stack.yaml
haskell/app/: Main.hs
haskell/test/: Spec.hs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
scala/: build.sbt
scala/src/main/scala/: Main.scala
scala/src/test/scala/: ExampleTest.scala
