name:                fp-haskell-lab
version:             0.1.0.0
synopsis:            Haskell Learning Lab
description:         A playground for learning functional programming in Haskell
license:             BSD3
author:              Learning Lab
maintainer:          lab@example.com
category:            Education
build-type:          Simple
cabal-version:       >=1.10

executable fp-haskell-lab
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite fp-haskell-lab-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
